src/objects/Item_Serial__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Warehouse_Product__c</referenceTo>
        <relationshipLabel>Serial Numbers</relationshipLabel>
        <relationshipName>Item_Serials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Usable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Usable</label>
        <type>Checkbox</type>
    </fields>
    <label>Item Serial</label>
    <nameField>
        <label>Item Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Serial</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>